--- a/09b._Middleware_Security/package.json
+++ b/09b._Middleware_Security/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0"
   }
 }
