--- a/13._exercises/sockets-Trading-Simulation/client/package.json
+++ b/13._exercises/sockets-Trading-Simulation/client/package.json
@@ -14,6 +14,8 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
+    "socket.io-client": "^4.8.1",
     "svelte-routing": "^2.13.0"
   }
 }
